Fix overflow:auto bug on the description

--- a/app/static/components/snippetpanel/markdown.less
+++ b/app/static/components/snippetpanel/markdown.less
@@ -43,9 +43,9 @@
 }
 .MarkDown ol, .MarkDown ul ol, .MarkDown ul ul ol {
     list-style-type: decimal;
-    -moz-padding-start: 20px;
-    -webkit-padding-start: 20px;
-    padding-left: 20px;
+    -moz-padding-start: 24px;
+    -webkit-padding-start: 24px;
+    padding-left: 24px;
 }
 .MarkDown ul ol ol, .MarkDown ol ol, .MarkDown ol ul ol {
     list-style-type: lower-alpha;
